--- a/index.html
+++ b/index.html
@@ -185,5 +185,163 @@
         
         <!-- custom js -->
         <script src="js/script.js"></script>
+
+
+
+    .<!-- ========== 1.1 header section ========== -->
+<header>
+</header>
+<!-- ========== end of 1.1 header section ========== -->
+<!-- ========== 1.2 hero section ========== -->
+<section class="hero">
+    <div class="container">
+        <div>
+            <div class="hero-social-icon flex">
+                <a href="#"><i class="fa-bands fa-facebook"></i></a>
+                <a href="#"><i class="fa-bands fa-instagram"></i></a>
+                <a href="#"><i class="fa-bands fa-twitter"></i></a>
+                <hr>
+        </div>
+        <div class="center-data flex flex-col gap-1">
+            <h1> DIGITAL SERVICES</h1>
+            <h3>BUILDING YOUR EMPIRE DIGITALLY</h3>
+            <div class="center-btn flex gap-15 mt-1">
+                <a href="/" class="btn_hover1">Get Started</a>
+                <a href="/" class="btn_hover2">Discover More</a>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+<!-- ========== end of 1.2 hero section ========== -->
+    <div>
+<!-- ========== 1.3 card section ========== -->
+<section class="feature"> 
+    <div class="container">
+        <div class="flex">
+            <div class="header-card">
+                <div>
+                    <figure>
+                        <img class="figure_img1" src="images/icon/feature1.png" alt="img">
+                    </figure>
+                    <h4>ROI-DRIVEN APPROACH</h4>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quod error
+                         doloribus expedita vel optio atque eius blanditiis excepturi, 
+                         fugiat dolores nihil voluptatibus ducimus laudantium ab. Aut veritatis ut 
+                         nulla? </p>
+                </div>
+                <div class="header-card">
+                    <div>
+                        <figure>
+                            <img class="figure_img1" src="images/icon/feature1.png" alt="img">
+                        </figure>
+                        <h4>ROI-DRIVEN APPROACH</h4>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quod error
+                             doloribus expedita vel optio atque eius blanditiis excepturi, 
+                             fugiat dolores nihil voluptatibus ducimus laudantium ab. Aut veritatis ut 
+                             nulla? </p>
+                    </div>
+                    <div class="header-card">
+                        <div>
+                            <figure>
+                                <img class="figure_img1" src="images/icon/feature1.png" alt="img">
+                            </figure>
+                            <h4>ROI-DRIVEN APPROACH</h4>
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quod error
+                                 doloribus expedita vel optio atque eius blanditiis excepturi, 
+                                 fugiat dolores nihil voluptatibus ducimus laudantium ab. Aut veritatis ut 
+                                 nulla? </p>
+                        </div>
+                        <div class="header-card">
+                            <div>
+                                <figure>
+                                    <img class="figure_img1" src="images/icon/feature1.png" alt="img">
+                                </figure>
+                                <h4>ROI-DRIVEN APPROACH</h4>
+                                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quod error
+                                     doloribus expedita vel optio atque eius blanditiis excepturi, 
+                                     fugiat dolores nihil voluptatibus ducimus laudantium ab. Aut veritatis ut 
+                                     nulla? </p>
+                            </div>           
+</section>
+<!-- ========== end of 1.3 card section ========== -->
+<!-- ========== 1.4 logoipsum section ========== -->  
+<section class="logoipsum">
+    <div class="container">
+        <div class="flex flex-col gap-2">
+            <hr class="hr1">
+            <h3 class="mb-15">OUR CLIENTS</h3>
+        </div>
+        <div class="logoipsum-slider sliderlogo">
+            <feature><img src="images/home/logoipsum1.svg" alt="logoipsum"></feature>
+            <feature><img src="images/home/logoipsum2.svg" alt="logoipsum"></feature>
+            <feature><img src="images/home/logoipsum3.svg" alt="logoipsum"></feature>  
+            <feature><img src="images/home/logoipsum4.svg" alt="logoipsum"></feature>
+            <feature><img src="images/home/logoipsum5.svg" alt="logoipsum"></feature>
+            <feature><img src="images/home/logoipsum6.svg" alt="logoipsum"></feature>
+        </div>
+        <hr class="hr2">
+</div>
+</section>
+<!-- ========== end of 1.4 logoipsum section ========== -->
+<!-- ========== 1.5 about us section ========== -->
+<section class="about">
+    <div class="container">
+        <div class="about-data flex-sb">
+            <div class="w-50">
+                <div class="flex about-title gap-1">
+                    <hr>
+                    <h5>ABOUT US</h5>
+                </div>
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing 
+                    elit. Minus iste fugit doloremque perferendis 
+                    voluptates? In veritatis quo ex, placeat quis 
+                    molestias, non nisi, similique dolor sint labore
+                    numquam eum eligendi?</h2>
+                <div class="flex gap-1 mt-15">
+                    <i class="fa-solid fa-check"></i>
+                    <h5> Lorem ipsum dolor sit amet consectetur, adipisici</h5>
+                </div>
+                <div class="flex gap-1 mt-15">
+                    <i class="fa-solid fa-check"></i>
+                    <h5> Lorem ipsum dolor sit amet consectetur, adipisici</h5>
+                </div>
+                <div class="flex mt-3 gap-20">
+                    <a href="#" class="btn_hover1">Get Started</a>
+                    <a href="#" class="btn_hover2">Discover More</a>
+        </div>
+    </div>
+    <div class="w-50 about-imgs flex flex-center">
+        </div>
+        <figure>
+            <img src="images/home/about.png" alt="img">
+        </figure>
+    </div>
+    <div class="ab-count flex flex-center">
+    <div class="flex flex-center">
+        <h2>12</h2>
+        <h2>+</h2>
+    </div>
+    <p>YEARS OF EXPERIENCE</p>
+    </div>
+    <div class="about-hr flex gap-1">
+        <hr>
+        <h6> Who we are? </h6>
+    </div>
+    </div>
+</section>
+<!-- ========== end of 1.5 about us section ========== -->
+<!-- ========== 1.6 section ========== -->
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
