log in navbar changed
to follow the file

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="flex nav-right">
-                        <p>Call Us: <span>+123 456 7890</span></p>
+                       <a href="./pages/form/form.html" class="nav-link">Login</a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
