--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                                     <li><a class="dropdown-item" href="comingsoon.html">Services</a></li>
                                     <li><a class="dropdown-item" href="comingsoon.html">Pricing Plan</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Portfolio</a></li>
+                                    <li><a class="dropdown-item" href="./pages/profile.html">Portfolio</a></li>
                                     <li><a class="dropdown-item" href="comingsoon.html">Team</a></li>
                                     <li><a class="dropdown-item" href="comingsoon.html">Testimonials</a></li>
                                     <li><a class="dropdown-item" href="comingsoon.html">FAQ</a></li>
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="flex nav-right">
-                       <a href="./pages/form/form.html" class="nav-link">Login</a>
+                        <a href="./pages/form.html" class="nav-link" id="usernameLink">Login</a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
@@ -88,7 +88,7 @@
                                     <ul>
                                         <li><a class="nav-link" href="services.html">Services</a></li>
                                         <li><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                                        <li><a class="dropdown-item" href="./pages/profile.html">Portfolio</a></li>
                                         <li><a class="nav-link" href="team.html">Team</a></li>
                                         <li><a class="nav-link" href="testimonials.html">Testimonials</a></li>
                                         <li><a class="nav-link" href="faq.html">FAQ</a></li>
