--- a/pages/profile.html
+++ b/pages/profile.html
@@ -23,7 +23,7 @@
     <div class="prof">
         <section class="hidden">
             <div class="profiles hidden" >
-                <a href=""><img src="./assets/img/1.jpg" alt="" id="ali"></a>
+                <a href="https://alingetz.github.io/PORTFOLIO/"><img src="./assets/img/1.jpg" alt="" id="ali"></a>
                 <h2>ALI</h2>
             </div>
             <div class="profiles hidden">
