link changes in index update

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                     <ul>
                                         <li><a class="nav-link" href="services.html">Services</a></li>
                                         <li><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li><a class="dropdown-item" href="./pages/profile.html">Portfolio</a></li>
+                                        <li><a class="nav-link" href="./pages/profile.html">Portfolio</a></li>
                                         <li><a class="nav-link" href="team.html">Team</a></li>
                                         <li><a class="nav-link" href="testimonials.html">Testimonials</a></li>
                                         <li><a class="nav-link" href="faq.html">FAQ</a></li>
@@ -126,7 +126,7 @@
                     <ul class="flex">
                         <li>
                             <a href="#"> <i class="fa-solid fa-phone"></i></a>
-                            <a href="#" class="text-lowercase">Yourname@Email.Com</a>
+                            <a href="#" class="text-lowercase">Yourname@Email.com</a>
                         </li>
                         <li>
                             <a href="#"> <i class="fa-regular fa-envelope"></i></a>
@@ -143,6 +143,9 @@
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    </span>
+                    <span class="flex">
+                        <button class="logout-Btn" id="_logout">Logout</button>
                     </span>
                 </section>
             </header>
