Update about.html slider img

--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
                             <li><a class="nav-link" href="../index.html">Home</a></li>
                             <li><a class="nav-link active" href="about.html">About</a></li>
                             <li><a class="nav-link" href="./pages/gallery.html">Gallery</a></li>
-                            <li><a class="nav-link" href="./contact.html">Contact</a></li>
+                            <!-- <li><a class="nav-link" href="./contact.html">Contact</a></li> -->
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -115,8 +115,7 @@
                         <a href="/"><img src="../assets/img/right-side-logo.png" alt="logo"></a>
                         <button class="close_right_sidebar fa-solid fa-xmark" onclick="close_right_sade()"> </button>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.
+                    <p>Explore Winxify and discover how it can help you take your Winx portfolio to the next level.
                     </p>
                     <a href="about.html" class="btn_hover1">Discover More</a>
                     <hr>
@@ -124,7 +123,7 @@
                     <ul class="flex">
                         <li>
                             <a href="#"> <i class="fa-solid fa-phone"></i></a>
-                            <a href="#" class="text-lowercase">Yourname@Email.Com</a>
+                            <a href="#" class="text-lowercase">winxify@gmail.com</a>
                         </li>
                         <li>
                             <a href="#"> <i class="fa-regular fa-envelope"></i></a>
@@ -132,8 +131,7 @@
                         </li>
                         <li>
                             <a href="#"> <i class="fa-sharp fa-regular fa-clock"></i></a>
-                            <a href="#">Office Hours: 8AM - 11PM Sunday -
-                                Weekend Day</a>
+                            <a href="#">Office Hours: 8AM - 5PM Weekdays</a>
                         </li>
                     </ul>
                     <span class="flex">
@@ -174,12 +172,12 @@
                     <div class="about-imgs flex flex-center w-50" data-aos="fade-down">
                         <div>
                             <figure>
-                                <img src="../assets/img/home/about.png" alt="img">
+                                <img src="../assets/img/home/alingetz.png" alt="img">
                             </figure>
                         </div>
                         <div class="ab-count flex flex-center">
                             <div class="flex flex-center">
-                                <h2>Mark Garcia</h2>
+                                <h2>Alyzza Goyon</h2>
                             </div>
                             <p>CEO</p>
                         </div>
@@ -220,7 +218,7 @@
                         </div>
                         <div class="experience-hr flex gap-1">
                             <hr>
-                            <h6> Mission & Values </h6>
+                            <h6> Our Values </h6>
                         </div>
                     </div>
                     <div class="w-50 flex flex-col gap-2 mt-1">
@@ -297,71 +295,71 @@
                 </div>
                 <div class="team-slider flex mt-15" data-aos="zoom-in">
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider1.png" alt="Avatar">
+                        <img src="../assets/img/slider/2.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Ava Arce</h3>
                                 <h4>Developer</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/avasamanthaarce15/"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://github.com/naiahhh"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://www.instagram.com/eri_zanaiah/"><i class="fa-brands fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider2.png" alt="Avatar">
+                        <img src="../assets/img/slider/4.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Eli Baltazar</h3>
                                 <h4>Creator</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/lyza.baltazar.14"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://github.com/EliiiBaltazar/"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://www.instagram.com/heyits_lyzaa/"><i class="fa-brands fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider3.png" alt="Avatar">
+                        <img src="../assets/img/slider/1.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Mark Garcia</h3>
                                 <h4>Web Designer</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/aitzmark"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://github.com/jshmrk/"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://www.instagram.com/yos.siahh/"><i class="fa-brands fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider4.png" alt="Avatar">
+                        <img src="../assets/img/slider/3.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
-                                <h3>Ali Goyon</h3>
-                                <h4>Ui / Ux</h4>
+                                <h3>Alyzza Goyon</h3>
+                                <h4>CEO</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/mariellelyza"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://github.com/alingetz/"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://www.instagram.com/yzalza/"><i class="fa-brands fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider4.png" alt="Avatar">
+                        <img src="../assets/img/slider/clay.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Clayton Tambis</h3>
-                                <h4>Developer</h4>
+                                <h4>UI/UX</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/dalet.12"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://github.com/Spod101/"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://www.instagram.com/d.alettt/"><i class="fa-brands fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -404,8 +402,7 @@
                         <div class="flex flex-start footer-center">
                             <div class="w-33 flex flex-col gap-2 flex-start">
                                 <a href="../index.html"><img src="../assets/img/logo.png" alt="footer-logo"></a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore magna aliqua.
+                                <p>Explore Winxify and discover how it can help you take your Winx portfolio to the next level.
                                 </p>
                                 <span class="flex gap-2">
                                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -436,7 +433,7 @@
                                 <ul class="flex flex-col gap-2 flex-start">
                                     <li>
                                         <a href="#"> <i class="fa-solid fa-phone"></i></a>
-                                        <a href="#" class="text-lowercase">Yourname@Email.Com</a>
+                                        <a href="#" class="text-lowercase">winxify@gmail.com</a>
                                     </li>
                                     <li>
                                         <a href="#"> <i class="fa-regular fa-envelope"></i></a>
@@ -444,8 +441,8 @@
                                     </li>
                                     <li>
                                         <a href="#"> <i class="fa-sharp fa-regular fa-clock"></i></a>
-                                        <a href="#">Office Hours: 8AM - 11PM
-                                            Sunday - Weekend Day</a>
+                                        <a href="#">Office Hours: 8AM - 5PM Weekdays</a>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
