Update about.html again

--- a/pages/about.html
+++ b/pages/about.html
@@ -275,7 +275,7 @@
 
         <!-- ====== 1.10. team section ====== -->
         <section class="team">
-            <div class="container">
+            < class="container">
                 <div class="flex team-center" data-aos="fade-up">
                     <div class="w-66">
                         <div class="flex gap-1">
@@ -364,8 +364,8 @@
                             </div>
                         </div>
                     </div>
-                    
                 </div>
+                
             </div>
             <!-- <div class="team-btn" data-aos="zoom-in">
                 <div class="container flex flex-sb gap-2 flex-wrap">
