--- a/pages/about.html
+++ b/pages/about.html
@@ -115,8 +115,7 @@
                         <a href="/"><img src="../assets/img/right-side-logo.png" alt="logo"></a>
                         <button class="close_right_sidebar fa-solid fa-xmark" onclick="close_right_sade()"> </button>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.
+                    <p>Explore Winxify and discover how it can help you take your Winx portfolio to the next level.
                     </p>
                     <a href="about.html" class="btn_hover1">Discover More</a>
                     <hr>
@@ -296,7 +295,7 @@
                 </div>
                 <div class="team-slider flex mt-15" data-aos="zoom-in">
                     <div class="team-img">
-                        <img src="../assets/img/slider/2.png" alt="Avatar">
+                        <img src="../assets/img/slider/team-slider1.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Ava Arce</h3>
@@ -310,7 +309,7 @@
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/4.png" alt="Avatar">
+                        <img src="../assets/img/slider/team-slider2.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Elizabeth Baltazar</h3>
@@ -324,7 +323,7 @@
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/1.png" alt="Avatar">
+                        <img src="../assets/img/slider/team-slider3.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Mark Garcia</h3>
@@ -338,7 +337,7 @@
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/3.png" alt="Avatar">
+                        <img src="../assets/img/slider/team-slider4.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Allyza Goyon</h3>
@@ -352,7 +351,7 @@
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/clay.png" alt="Avatar">
+                        <img src="../assets/img/slider/team-slider1.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Clayton Tambis</h3>
