--- a/pages/about.html
+++ b/pages/about.html
@@ -295,7 +295,7 @@
                 </div>
                 <div class="team-slider flex mt-15" data-aos="zoom-in">
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider1.png" alt="Avatar">
+                        <img src="../assets/img/slider/2.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Ava Arce</h3>
@@ -309,7 +309,7 @@
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider2.png" alt="Avatar">
+                        <img src="../assets/img/slider/4.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Elizabeth Baltazar</h3>
@@ -323,7 +323,7 @@
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider3.png" alt="Avatar">
+                        <img src="../assets/img/slider/1.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Mark Garcia</h3>
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider4.png" alt="Avatar">
+                        <img src="../assets/img/slider/3.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Allyza Goyon</h3>
@@ -351,7 +351,7 @@
                         </div>
                     </div>
                     <div class="team-img">
-                        <img src="../assets/img/slider/team-slider1.png" alt="Avatar">
+                        <img src="../assets/img/slider/clay.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
                                 <h3>Clayton Tambis</h3>
@@ -367,13 +367,13 @@
                     
                 </div>
             </div>
-            <!-- <div class="team-btn" data-aos="zoom-in">
+            <div class="team-btn" data-aos="zoom-in">
                 <div class="container flex flex-sb gap-2 flex-wrap">
                     <h4>Ask A Question To Our Amazing Team, And Get, Response Quickly.
                     </h4>
-                    <a href="./pages/contact.html" class="btn_hover2">Contact Now</a>
+                    <a href="contact.html" class="btn_hover2">Contact Now</a>
                 </div>
-            </div> -->
+            </div>
         </section>
         <!-- ====== End of 1.10. team section ====== -->
 
