--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="flex nav-right">
-                        <a href="./pages/form.html" class="nav-link" id="usernameLink">Login</a>
+                        <a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
