Update gallery links

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -43,7 +43,7 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                                     <li><a class="dropdown-item" href="comingsoon.html">Services</a></li>
                                     <li><a class="dropdown-item" href="comingsoon.html">Pricing Plan</a></li>
-                                    <li><a class="dropdown-item" href="comingsoon.html">Portfolio</a></li>
+                                    <li><a class="dropdown-item" href="./pages/profile.html">Portfolio</a></li>
                                     <li><a class="dropdown-item" href="comingsoon.html">Team</a></li>
                                     <li><a class="dropdown-item" href="comingsoon.html">Testimonials</a></li>
                                     <li><a class="dropdown-item" href="comingsoon.html">FAQ</a></li>
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="flex nav-right">
-                        <p>Call Us: <span>+123 456 7890</span></p>
+                         <a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a>
                         <!-- header buttons -->
                         <div class="notification" data-count="0" >
                             <i onclick="open_notification()" id="bellIcon" class="fa-solid fa-bell"></i>
@@ -86,7 +86,7 @@
                                     <ul>
                                         <li><a class="nav-link" href="services.html">Services</a></li>
                                         <li><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                                        <li><a class="nav-link" href="./pages/profile.html">Portfolio</a></li>
                                         <li><a class="nav-link" href="team.html">Team</a></li>
                                         <li><a class="nav-link" href="testimonials.html">Testimonials</a></li>
                                         <li><a class="nav-link" href="faq.html">FAQ</a></li>
@@ -139,6 +139,9 @@
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    </span>
+                    <span class="flex">
+                        <button class="logout-Btn" id="_logout">Logout</button>
                     </span>
                 </section>
             </header>
