--- a/pages/form.html
+++ b/pages/form.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/css/form.css" />
     <link rel="shortcut icon" href="../assets/img/fave_icon.png" type="image/x-icon">
     <title>Winxify</title>
@@ -99,7 +96,7 @@
           <div class="content">
             <h3>New here ?</h3>
             <p>
-              Welcome aboard! We're thrilled to have you join us. Let's get started on this exciting journey together or sign up with us now!
+              Welcome back! Let's dive back into the action together or sign in with us now!
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Sign up
@@ -111,7 +108,7 @@
           <div class="content">
             <h3>One of us ?</h3>
             <p>
-              Welcome back! Let's dive back into the action together or sign in with us now!
+              Welcome aboard! We're thrilled to have you join us. Let's get started on this exciting journey together or sign up with us now!
             </p>
             <button class="btn transparent" id="sign-in-btn">
               Sign in
