--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <div>
                         <!-- side menus -->
                         <ul>
+                            <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
                             <li><a class="nav-link active" href="index.html">Home</a></li>
                             <li><a class="nav-link" href="./pages/about.html">About</a></li>
                             <li><a class="nav-link" href="./pages/contact.html">Contact</a></li>
@@ -98,6 +99,9 @@
                                     </ul>
                                 </div>
                             </li>
+                            <span class="flex">
+                                <button class="logoutSide" id="_logout">Logout</button>
+                            </span>
                         </ul>
                     </div>
                 </aside>
