Update gallery.html for login

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -73,9 +73,10 @@
                     <div>
                         <!-- side menus -->
                         <ul>
+                            <li><a href="./pages/form.html" class="nav-link" id="usernameLink"><button class="login-Btn" id="_login">Login</button></a></li>
                             <li><a class="nav-link active" href="index.html">Home</a></li>
-                            <li><a class="nav-link" href="about.html">About</a></li>
-                            <li><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li><a class="nav-link" href="./pages/about.html">About</a></li>
+                            <li><a class="nav-link" href="./pages/contact.html">Contact</a></li>
                             <li class="pages"><a href="#">More</a></li>
                             <li class="collapse_btn">
                                 <a class="nav-link plus_collapse" data-bs-toggle="collapse" href="javascript:void(0);"
@@ -86,7 +87,7 @@
                                     <ul>
                                         <li><a class="nav-link" href="services.html">Services</a></li>
                                         <li><a class="nav-link" href="pricing.html">Pricing Plan</a></li>
-                                        <li><a class="nav-link" href="../pages/profile.html">Portfolio</a></li>
+                                        <li><a class="nav-link" href="./pages/profile.html">Portfolio</a></li>
                                         <li><a class="nav-link" href="team.html">Team</a></li>
                                         <li><a class="nav-link" href="testimonials.html">Testimonials</a></li>
                                         <li><a class="nav-link" href="faq.html">FAQ</a></li>
@@ -96,6 +97,9 @@
                                     </ul>
                                 </div>
                             </li>
+                            <span class="flex">
+                                <button class="logoutSide" id="_logout">Logout</button>
+                            </span>
                         </ul>
                     </div>
                 </aside>
